# model-eval-public

./: .env.example  .gitignore  FEATURE_INVENTORY.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a3f5c2d8b901_add_warmer_version_note.py  a7c9d1e2f317_add_benchmark_suites.py  a8c1d2e3f401_add_artifact_preprocessing_runs.py  b1c2d3e4f521_add_metric_adapter_configs.py  b8d4f1a6c219_add_replicate_metadata.py  bdb42fbb358a_create_persistence_tables.py  c2d4e6f8a918_add_provider_cache_timestamp.py  (+9 more)
docs/: architecture.md  copper-memo-demo.md  data-model.md  headless-workflow.md  implementation-task-list.md  mvp-roadmap.md  privacy-repro-safety.md  product-brief.md  results-analytics.md  v2-demo.md  v2-implementation-task-list.md  v2-pr-sized-task-list.md
examples/: copper_memo_context_sensitivity.yaml  v2_copper_benchmark_suite.yaml
frontend/: index.html  package-lock.json  package.json
tests/: test_artifacts_phase3.py  test_benchmark_suites_phase17.py  test_cli_seed.py  test_copper_demo_phase12.py  test_deterministic_evaluators_phase9.py  test_executor_phase5.py  test_exports_phase11.py  test_library_builder_phase6.py  test_llm_judge_execution_phase15.py  test_llm_judges_phase14.py  test_manifest_contract.py  test_metric_adapters_phase21.py  test_persistence_phase2.py  test_privacy_repro_phase13.py  test_promptfoo_interop_phase22.py  test_provider_adapters_phase4.py  test_repository_hygiene.py  test_results_analytics_phase10.py  test_review_phase8.py  test_review_queues_phase16.py  test_v2_demo_phase25.py
(+77 files in other folders)
