[project]
name = "model-eval"
version = "0.1.0"
description = "A model-evaluation workbench for conversational context sensitivity."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "pillow>=10.0",
  "pymupdf>=1.24",
  "pypdf>=4.0",
  "pydantic>=2.7",
  "psycopg[binary]>=3.1",
  "pyyaml>=6.0",
  "redis>=5.0",
  "rq>=2.0",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
evalbench = "model_eval_cli.main:app"

[tool.setuptools]
package-dir = {"" = "backend", "model_eval_cli" = "cli/model_eval_cli"}

[tool.setuptools.packages.find]
where = ["backend", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
